first pass at items
